--- a/drupal/sites/all/themes/tp4/sass/modules/_header.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_header.scss
@@ -369,7 +369,7 @@ header {
       position: relative;
       z-index: 9;
       width: 34px;
-      height: 38px;
+      height: 37px;
       cursor: pointer;
       &:before{
         display: block;
