--- a/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
@@ -861,8 +861,8 @@ body.node-type-campaign-page, #main.card-page{
         border-bottom: 3px solid #000;
         cursor: pointer;
         position: absolute;
-        right: 25px;
-        top: 17px;
+        right: 10%;
+        bottom: 50%;
       }
     }
     
